@@ -9,7 +9,9 @@
 
 /* Now define the internal interfaces.  */
 #ifndef __Need_M_And_C
-# include <sys/stat.h>
+# ifndef _ISOMAC
+#  include <sys/stat.h>
+# endif
 
 __BEGIN_DECLS
 
@@ -78,8 +80,10 @@ extern int __clearenv (void);
 extern char *__canonicalize_file_name (__const char *__name);
 extern char *__realpath (__const char *__name, char *__resolved);
 extern int __ptsname_r (int __fd, char *__buf, size_t __buflen);
+# ifndef _ISOMAC
 extern int __ptsname_internal (int fd, char *buf, size_t buflen,
 			       struct stat64 *stp);
+# endif
 extern int __getpt (void);
 extern int __posix_openpt (int __oflag);
 
